// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header includes a Skip Nav link as its first link 1`] = `
<Fragment>
  <a
    className="usa-skipnav"
    href="#main"
  >
    Skip to main content
  </a>
  <HeaderSlim
    siteLogo={
      <SiteLogo
        image={
          Object {
            "alt": "Massachusetts state seal",
            "height": 45,
            "src": "test-file-stub",
            "width": 45,
          }
        }
        siteName="Paid Family and Medical Leave"
        url={
          Object {
            "domain": "/",
          }
        }
      />
    }
    utilityNav={
      <AuthNav
        onLogout={[MockFunction]}
      />
    }
  />
</Fragment>
`;

exports[`Header renders Header for logged in claimant 1`] = `
<Fragment>
  <a
    className="usa-skipnav"
    href="#main"
  >
    Skip to main content
  </a>
  <BetaBanner
    feedbackUrl="https://www.mass.gov/paidleave-claimant-feedback"
  />
  <HeaderSlim
    siteLogo={
      <SiteLogo
        image={
          Object {
            "alt": "Massachusetts state seal",
            "height": 45,
            "src": "test-file-stub",
            "width": 45,
          }
        }
        siteName="Paid Family and Medical Leave"
        url={
          Object {
            "domain": "/",
          }
        }
      />
    }
    utilityNav={
      <AuthNav
        onLogout={[MockFunction]}
        user={
          User {
            "auth_id": null,
            "consented_to_data_sharing": null,
            "email_address": "email@address.com",
            "roles": Array [],
            "status": null,
            "user_id": "mock-user-id",
            "user_leave_administrators": Array [],
          }
        }
      />
    }
  />
</Fragment>
`;

exports[`Header renders the correct maintenance alert text when only start time is provided 1`] = `
Array [
  "We will be performing some maintenance on our system starting ",
  <strong
    key="strong-1"
  >
    June 15, 2021, 3:00 PM EDT
  </strong>,
  ".",
]
`;

exports[`Header renders the correct maintenance alert text when start/end times are both provided 1`] = `
Array [
  "We will be performing some maintenance on our system from ",
  <strong
    key="strong-1"
  >
    June 15, 2021, 3:00 PM EDT
  </strong>,
  " to ",
  <strong
    key="strong-3"
  >
    June 17, 2021, 10:00 AM EDT
  </strong>,
  ".",
]
`;
